Made sure that the nav bar got fixed, had to interviene myself and make some adjustments.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -152,3 +152,8 @@ nav.navbar-custom-padding{
   color: navy;
   margin-bottom: 1rem;
 }
+
+/* Extra vertical offset for specific pages that need content pushed down further */
+.page-offset-large {
+  margin-top: 3.5rem;
+}
